--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <p><strong>Docente:</strong> M.T.I. Marco A. Ramírez Hernández<p>
         <br>
         <p>
-            Elaborador por: <strong>&lt;Nombre Completo del Estudiante&gt;</strong>
-            - <a href="https://www.github.com/usuatioGit">@usuatrioGit</a>
+            Elaborador por: <strong>&lt;Luis David Cruz Flores&gt;</strong>
+            - <a href="https://github.com/JuliaReyes536">@JuliaReyes536</a>
         </p>
   </header>
 </body>
